k8s/istio/mesh/serviceentry-cross-cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cross-cluster-bci
  namespace: freedomforge-earth
  labels:
    app.kubernetes.io/part-of: freedomforge-max
spec:
  hosts:
    - bci-decoder.freedomforge-earth.svc.cluster.local
    - bci-decoder.freedomforge-lunar.svc.cluster.local
    - bci-decoder.freedomforge-mars.svc.cluster.local
  ports:
    - number: 3000
      name: http
      protocol: HTTP
  location: MESH_INTERNAL
  resolution: DNS
